# LIBS-PYTHON

./: .gitignore  DriveSelenium.py  GerarSenha.py  LerJson.py  Logs.py  LogsFile.py  README.md  Regex.py  RegexPJE.py  RegexProcessos.py
package_db/: README.md  pyproject.toml
package_db/src/conexao_db/: ConnectionDB.py
