[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conexao_db"
version = "0.0.1"
authors = [
  { name="meu nome", email="email@email.com" },
]
description = "descriçao do meu package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"

[tool.hatch]
requires = [
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv"
]